--- a/packages.config
+++ b/packages.config
@@ -5,8 +5,15 @@
   <package id="Google.Apis.Core" version="1.60.0" targetFramework="net48" />
   <package id="Google.Apis.YouTube.v3" version="1.60.0.2945" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
-  <package id="OWO" version="2.1.0" targetFramework="net48" />
+  <package id="OWO" version="2.1.1" targetFramework="net48" />
+  <package id="PacketDotNet" version="1.4.6" targetFramework="net48" />
+  <package id="SharpPcap" version="6.2.5" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="6.0.0" targetFramework="net48" />
   <package id="WebSocketSharp-NonPreRelease" version="1.0.0" targetFramework="net48" />
 </packages>
