--- a/owoMedia.csproj
+++ b/owoMedia.csproj
@@ -100,6 +100,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="applicationFrame\Service\LabelService.cs" />
     <Compile Include="applicationFrame\Service\OwoMediaFileService.cs" />
     <Compile Include="config\theme\ThemeBase.cs" />
     <Compile Include="config\theme\ThemeDark.cs" />
@@ -172,6 +173,12 @@
     <Compile Include="home\components\ManageVideoInfo.Designer.cs">
       <DependentUpon>ManageVideoInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="sensationEditor\components\CreateVideoInfobox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="sensationEditor\components\CreateVideoInfobox.Designer.cs">
+      <DependentUpon>CreateVideoInfobox.cs</DependentUpon>
+    </Compile>
     <Compile Include="sensationEditor\components\pages\EditorMenuPage.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -184,11 +191,14 @@
     <Compile Include="sensationEditor\components\pages\VideoEditorPage.Designer.cs">
       <DependentUpon>VideoEditorPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="sensationEditor\data\SensationEditorTrack.cs" />
+    <Compile Include="sensationEditor\data\SensationTemplate\SensationTemplateData.cs" />
     <Compile Include="sensationPlayer\SensationPlayer.cs" />
-    <Compile Include="sensationPlayer\sensationTemplate\SensationTemplate.cs" />
-    <Compile Include="sensationPlayer\sensationTemplate\SensationTemplateCompound.cs" />
-    <Compile Include="sensationPlayer\sensationTemplate\SensationTemplateValues.cs" />
-    <Compile Include="sensationPlayer\sensationTemplate\SensationTemplateString.cs" />
+    <Compile Include="sensationPlayer\SensationPlayerEditor.cs" />
+    <Compile Include="sensationPlayer\sensationWrapper\SensationWrapper.cs" />
+    <Compile Include="sensationPlayer\sensationWrapper\SensationWrapperCompound.cs" />
+    <Compile Include="sensationPlayer\sensationWrapper\SensationWrapperValues.cs" />
+    <Compile Include="sensationPlayer\sensationWrapper\SensationWrapperString.cs" />
     <Compile Include="sensationRecorder\components\pages\SensationRecorderPage.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -279,6 +289,9 @@
     <EmbeddedResource Include="home\components\ManageVideoInfo.resx">
       <DependentUpon>ManageVideoInfo.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="sensationEditor\components\CreateVideoInfobox.resx">
+      <DependentUpon>CreateVideoInfobox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="sensationEditor\components\pages\EditorMenuPage.resx">
       <DependentUpon>EditorMenuPage.cs</DependentUpon>
     </EmbeddedResource>
@@ -352,11 +365,9 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="sensationEditor\data\" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="videoViewer\html\videoViewer.html" />
+    <EmbeddedResource Include="resources\html\videoViewer.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
