Rename and Editor Progress

--- a/hapticMedia.csproj
+++ b/hapticMedia.csproj
@@ -6,12 +6,27 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E06FB3A9-CD8B-4140-9DC3-2B6D0F96D859}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>owoMedia</RootNamespace>
-    <AssemblyName>owoMedia</AssemblyName>
+    <RootNamespace>hapticMedia</RootNamespace>
+    <AssemblyName>hapticMedia</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -192,12 +207,17 @@
       <DependentUpon>VideoEditorPage.cs</DependentUpon>
     </Compile>
     <Compile Include="sensationEditor\data\SensationEditorTrack.cs" />
+    <Compile Include="sensationEditor\data\SensationTemplate\SensationTemplateDataCapture.cs" />
+    <Compile Include="sensationEditor\data\SensationTemplate\SensationTemplateDataCompound.cs" />
+    <Compile Include="sensationEditor\data\SensationTemplate\SensationTemplateDataString.cs" />
+    <Compile Include="sensationEditor\data\SensationTemplate\SensationTemplateDataValue.cs" />
     <Compile Include="sensationEditor\data\SensationTemplate\SensationTemplateData.cs" />
     <Compile Include="sensationEditor\data\SensationTemplate\SensationTemplateMuscleProvider.cs" />
     <Compile Include="sensationEditor\data\SensationTemplate\SensationTemplateValueProvider.cs" />
     <Compile Include="sensationPlayer\SensationPlayer.cs" />
     <Compile Include="sensationPlayer\SensationPlayerEditor.cs" />
     <Compile Include="sensationPlayer\sensationWrapper\SensationWrapper.cs" />
+    <Compile Include="sensationPlayer\sensationWrapper\SensationWrapperCapture.cs" />
     <Compile Include="sensationPlayer\sensationWrapper\SensationWrapperCompound.cs" />
     <Compile Include="sensationPlayer\sensationWrapper\SensationWrapperValues.cs" />
     <Compile Include="sensationPlayer\sensationWrapper\SensationWrapperString.cs" />
@@ -207,6 +227,7 @@
     <Compile Include="sensationRecorder\components\pages\SensationRecorderPage.Designer.cs">
       <DependentUpon>SensationRecorderPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="sensationEditor\data\SensationTemplate\BaseSensationConstants.cs" />
     <Compile Include="sensationRecorder\data\CaptureData.cs" />
     <Compile Include="videoViewer\components\VideoSearch.cs">
       <SubType>UserControl</SubType>
@@ -367,7 +388,18 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.8">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.8 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="resources\html\videoViewer.html" />
   </ItemGroup>
